# curate-ipsum

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTEXT.md  DECISIONS.md  Makefile  PHASE2_PLAN.md  PROGRESS.md  README.md  ROADMAP.md  architectural_vision.md  belief_revision_framework.md  brs_cicd.md  brs_contract_pr.md  brs_integration_plan.md  brs_v2_refactoring_plan.md  config.toml  inferred_goals.md  m1_multi_framework_plan.md  manifest.json  mcp.json  models.py  mutation-tool-plan-ste.md  potential_directions.md  pyproject.toml  schema.ts  server.json  server.py  smithery.yaml  summary.md  synergies.md  synthesis_framework.md  tools.py
.github/workflows/: ci.yml  publish-mcp.yml  release.yml  tag-release.yml
curate_ipsum/: __init__.py  server.py  tools.py
curate_ipsum/adapters/: __init__.py  evidence_adapter.py
curate_ipsum/domains/: __init__.py
curate_ipsum/graph/: __init__.py  asr_extractor.py  dependency_extractor.py  extractor.py  hierarchy.py  kameda.py  partitioner.py  spectral.py
curate_ipsum/parsers/: __init__.py  cosmic_ray_parser.py  mutmut_parser.py  poodle_parser.py  stryker_parser.py  universalmutator_parser.py
curate_ipsum/rag/: __init__.py  search.py
curate_ipsum/regions/: __init__.py  models.py
curate_ipsum/storage/: __init__.py  graph_store.py  incremental.py  kuzu_graph_store.py  sqlite_graph_store.py  synthesis_store.py
curate_ipsum/synthesis/: __init__.py  ast_operators.py  cegis.py  cloud_llm.py  entropy.py  fitness.py  llm_client.py  local_llm.py  population.py
curate_ipsum/theory/: __init__.py  failure_analyzer.py  manager.py  rollback.py
curate_ipsum/verification/: __init__.py  backend.py  orchestrator.py
curate_ipsum/verification/backends/: __init__.py  angr_docker.py  mock.py  z3_backend.py
curate_ipsum/verification/harness/: builder.py
curate_ipsum/verification/runners/: run_angr.py
docker/: Dockerfile.angr-runner  Dockerfile.mcp-server  docker-compose.yml
docs/: architecture.md  conf.py  configuration.md  index.md  install.md  lpython_klee_feasibility.md  m1_m3_audit.md  quickstart.md  tools.md
docs/api/: graph.rst  index.rst  models.rst  parsers.rst  rag.rst  regions.rst  server.rst  storage.rst  synthesis.rst  theory.rst  verification.rst
docs/design/: PHASE2_PLAN.md  architectural_vision.md  belief_revision_framework.md  brs_integration_plan.md  brs_v2_refactoring_plan.md  index.md  m1_multi_framework_plan.md  potential_directions.md  synergies.md  synthesis_framework.md
docs/development/: index.md  releasing.md  testing.md
domains/: code_mutation_smoke.py
graph/: __init__.py  asr_extractor.py  ast_extractor.py  dependency_extractor.py  extractor.py  hierarchy.py  kameda.py  models.py  partitioner.py  planarity.py  spectral.py
parsers/: __init__.py  cosmic_ray_parser.py  detection.py  mutmut_parser.py  poodle_parser.py  stryker_parser.py  universalmutator_parser.py
quick-verification/: pyproject.toml
quick-verification/docker/: Dockerfile.angr-runner  Dockerfile.rag-service  docker-compose.yml
quick-verification/snippets/: Dockerfile.angr-runner  Dockerfile.rag-service  conftest_mock.py  docker-compose.yml  embedding_provider.py  harness_builder.py  orchestrator.py  rag_search.py  requirements-rag.txt  vector_store.py
quick-verification/src/quickverify/: __init__.py
quick-verification/src/quickverify/config/: settings.py
quick-verification/src/quickverify/rag/: embedding_provider.py  search.py  vector_store.py
quick-verification/src/quickverify/verification/: __init__.py  backend.py  orchestrator.py  types.py
quick-verification/src/quickverify/verification/backends/: __init__.py  angr_docker.py  mock.py  z3_backend.py
quick-verification/src/quickverify/verification/harness/: builder.py
quick-verification/tests/: conftest.py  test_mock_backend.py  test_orchestrator.py  test_rag_pipeline.py  test_types.py  test_vector_store_chroma.py  test_z3_backend.py
rag/: embedding_provider.py  search.py  vector_store.py
regions/: models.py
scripts/: rewrite_imports.py
storage/: __init__.py  graph_store.py  incremental.py  kuzu_graph_store.py  sqlite_graph_store.py  synthesis_store.py
synthesis/: __init__.py  ast_operators.py  cegis.py  cloud_llm.py  entropy.py  fitness.py  llm_client.py  local_llm.py  models.py  population.py
tests/: __init__.py  conftest.py  test_assertions.py  test_brs_integration.py  test_cegis.py  test_failure_analyzer.py  test_full_pipeline_end_to_end.py  test_genetic_operators.py  test_graph_extraction.py  test_hierarchy_deps.py  test_incremental.py  test_integration_stringent.py  test_kuzu_graph_store.py  test_llm_client.py  test_m1_parsers.py  test_m1_regions.py  test_m3_end_to_end.py  test_m4_end_to_end.py  test_m5_end_to_end.py  test_m6_end_to_end.py  test_m6_rag_end_to_end.py  test_mcp_graph.py  test_new_parsers.py  test_planarity_kameda.py  test_provenance.py  test_rag.py  test_rollback.py  test_spectral.py  test_sqlite_graph_store.py  test_synthesis_models.py  test_synthesis_store.py  test_verification_backends.py  test_verification_orchestrator.py  test_verification_types.py
theory/: __init__.py  assertions.py  failure_analyzer.py  manager.py  provenance.py  rollback.py
verification/: __init__.py  backend.py  orchestrator.py  types.py
verification/backends/: angr_docker.py  mock.py  z3_backend.py
verification/harness/: __init__.py  builder.py
verification/runners/: run_angr.py
verification/schemas/: request.schema.json  response.schema.json
