[project]
name = "curate-ipsum"
version = "0.2.0"
description = "Mutation testing orchestration MCP server with belief revision"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Erik Goughnour", email = "e.goughnour@gmail.com"}
]
keywords = ["mutation-testing", "mcp", "belief-revision", "synthesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "py-brs>=2.0.0",
    "pydantic>=2.0",
    "mcp>=1.0.0",
    "z3-solver>=4.12",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
graph = [
    "scipy>=1.10",
    "networkx>=3.0",
]
synthesis = [
    "httpx>=0.24",
]
graphdb = [
    "kuzu>=0.11.0",
]
embeddings-gpu = [
    "sentence-transformers[gpu]>=2.2",
]
embeddings-large = [
    "sentence-transformers>=2.2",
    "InstructorEmbedding>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "scipy>=1.10",
    "networkx>=3.0",
    "httpx>=0.24",
    "kuzu>=0.11.0",
]

[project.scripts]
curate-ipsum = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
