[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickverify"
version = "0.1.0"
description = "Fast-path binary verification + semantic-search RAG"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
z3 = ["z3-solver>=4.12"]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
all = [
    "z3-solver>=4.12",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "z3-solver>=4.12",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: requires Docker daemon",
    "slow: long-running tests",
    "rag: requires RAG dependencies (chromadb, sentence-transformers)",
]
